Second_Step/data/45/234/compilation.txt
Executable.java:22: error: cannot find symbol
        return Tools.tab.sortBubble();
                    ^
  symbol:   variable tab
  location: class Tools
1 error
./Executable.java:22: error: cannot find symbol
        return Tools.tab.sortBubble();
                    ^
  symbol:   variable tab
  location: class Tools
1 error
